# split-sumally

./: Pipfile  README.md  setup.cfg
test/: test_supsumally.py
