[metadata]
name = spsumally
version = 0.0.1
description = Summarize large texts with OpenAIs API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/kurehajime/spsumally

[options]
package_dir=
    =src
packages=find:
install_requires=
        openai~=0.27.0
        tiktoken~=0.3.0

[options.packages.find]
where=src